--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sulaiman Dawood - Junior Data Analyst</title>
     <meta name="description" content="Portfolio website of Sulaiman Dawood - Junior Data Analyst">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24' fill='none' stroke='%23007AFF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='5' height='10' x='4' y='12' rx='2'/%3E%3Crect width='5' height='16' x='9.5' y='6' rx='2'/%3E%3Crect width='5' height='6' x='15' y='16' rx='2'/%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&family=Orbitron:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -133,7 +133,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Data Science Jobs Dashboard</h3>
                         <p class="project-description">
-                            Comprehensive Power BI dashboard analyzing data science job market trends, salaries, and employment patterns. 
+                            Power BI dashboard analyzing data science job market trends, salaries, and employment patterns. 
                             Features interactive visualizations on job titles, salaries, experience levels, and geographic distributions 
                             using cleaned Kaggle dataset.
                         </p>
@@ -151,19 +151,42 @@
                     </div>
                 </div>
 
-                <div class="project-card coming-soon">
+                <div class="project-card">
                     <div class="project-number">02</div>
+                    <div class="project-image">
+                        <i class="ti ti-chart-line"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Premier League Teams Dashboard</h3>
+                        <p class="project-description">
+                            A comprehensive data analysis and visualization project examining Premier League football statistics across multiple seasons (2016-2019). This dashboard provides insights into team performance, disciplinary records, and various match statistics.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">SQL</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Excel</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Sulaiman-Dawood/Premier-League-Teams-Dashboard" target="_blank" class="project-link">
+                                <i class="ti ti-brand-github"></i>
+                                View on GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card coming-soon">
+                    <div class="project-number">03</div>
                     <div class="project-image">
                         <i class="ti ti-ball-football"></i>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Premier League Teams Analysis</h3>
+                        <h3 class="project-title">Suicides in Egypt Dashboard</h3>
                         <p class="project-description">
-                            Coming soon: Comprehensive analysis of Premier League teams performance, 
-                            player statistics, and match outcomes using advanced data analysis techniques.
+                            Coming soon: Comprehensive analysis of suicide rates in Egypt, exploring trends, demographics, and contributing factors using advanced data analysis techniques.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">SQL</span>
+                            <span class="tech-tag">Power BI</span>
                             <span class="tech-tag">Excel</span>
                             <span class="tech-tag">Python</span>
                         </div>
