--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     </a>
                 </div>
             </div>
+            <div class="hero-image-container">
+                <img src="Images/me.jpg" alt="Sulaiman Dawood" class="hero-image">
+            </div>
         </div>
     </section>
 
@@ -74,10 +77,19 @@
                         <div class="skills-list">
                             <span class="skill-tag">Excel</span>
                             <span class="skill-tag">SQL</span>
-                            <span class="skill-tag">Python</span>
                             <span class="skill-tag">Power BI</span>
                             <span class="skill-tag">Tableau</span>
                             <span class="skill-tag">R</span>
+                            <span class="skill-tag expand-skills" id="expand-skills">Python</span>
+                        </div>
+                        <div class="additional-skills" id="additional-skills">
+                            <div class="additional-skills-content">
+                                <span class="skill-tag">Pandas</span>
+                                <span class="skill-tag">Numpy</span>
+                                <span class="skill-tag">Matplotlib</span>
+                                <span class="skill-tag">Seaborn</span>
+                                <span class="skill-tag">Plotly</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -216,7 +228,7 @@
                         <i class="ti ti-mail"></i>
                     </a>
                 </div>
-                <p>&copy; 2025 Sulaiman Dawood. All rights reserved.</p>
+                <p>&copy; 2025 Sulaiman Dawood</p>
             </div>
         </div>
     </footer>
