update styles for improved responsiveness and visual consistency

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24' fill='none' stroke='%23007AFF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='5' height='10' x='4' y='12' rx='2'/%3E%3Crect width='5' height='16' x='9.5' y='6' rx='2'/%3E%3Crect width='5' height='6' x='15' y='16' rx='2'/%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&family=Orbitron:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -75,12 +75,19 @@
                     <div class="skills-section">
                         <h3><span class="star">*</span> Technical Skills</h3>
                         <div class="skills-list">
+                            <span class="skill-tag expand-skills" id="expand-skills">Python</span>
+                            <span class="skill-tag expand-skills2" id="expand-skills2">SQL</span>
                             <span class="skill-tag">Excel</span>
-                            <span class="skill-tag">SQL</span>
                             <span class="skill-tag">Power BI</span>
                             <span class="skill-tag">Tableau</span>
                             <span class="skill-tag">R</span>
-                            <span class="skill-tag expand-skills" id="expand-skills">Python</span>
+                        </div>
+                        <div class="additional-skills2" id="additional-skills2">
+                            <div class="additional-skills-content2">
+                                <span class="skill-tag">PostgreSQL</span>
+                                <span class="skill-tag">SQL Server</span>
+                                <span class="skill-tag">SQLite</span>
+                            </div>
                         </div>
                         <div class="additional-skills" id="additional-skills">
                             <div class="additional-skills-content">
@@ -139,9 +146,6 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-number">01</div>
-                    <div class="project-image">
-                        <i class="ti ti-chart-line"></i>
-                    </div>
                     <div class="project-content">
                         <h3 class="project-title">Data Science Jobs Dashboard</h3>
                         <p class="project-description">
@@ -165,9 +169,6 @@
 
                 <div class="project-card">
                     <div class="project-number">02</div>
-                    <div class="project-image">
-                        <i class="ti ti-chart-line"></i>
-                    </div>
                     <div class="project-content">
                         <h3 class="project-title">Premier League Teams Dashboard</h3>
                         <p class="project-description">
@@ -189,9 +190,6 @@
 
                 <div class="project-card coming-soon">
                     <div class="project-number">03</div>
-                    <div class="project-image">
-                        <i class="ti ti-ball-football"></i>
-                    </div>
                     <div class="project-content">
                         <h3 class="project-title">Suicides in Egypt Dashboard</h3>
                         <p class="project-description">
